projects slider to carousel to fix bug. Project detail design pass. Vertically centered arrows. Project type icons.

--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,6 @@
                         </div>
                     </div>
 
-
                     <!-- <div class="js--hbs-inject--arrow"></div> -->
 
                     <div class="intro__image-wrapper
@@ -65,10 +64,9 @@
                         <p class="intro__text 
                                   js--hbs-inject--intro__paragraph-fragments">
                         </p>
-                    <a href="/project1.html" style="color: white; margin: 4rem; font-family: sans-serif; ">state</a>
 
                     </div>
-                    <div class="intro__diags"></div>
+                    <div class="bg__diags bg__diags--intro"></div>
                 </div>
             </div>
 
@@ -159,7 +157,7 @@
                             js--button--resume-pdf" 
                         download="Kate Brehm Resume.pdf">
                         View Resume PDF
-                        <div class="bio__diags"></div>
+                        <div class="bg__diags bg__diags--bio"></div>
                     </a>
                 </div>
             </div>
@@ -189,13 +187,27 @@
                                         nav__item-label--this">
                                     <span>Art Projects</span>
                                     <div class="projects__tag-types">
-                                        <span class="projects__menu-label">View:</span> 
+                                        <!-- <span class="projects__menu-label">View:</span>  -->
                                         <span class="projects__menu-tag 
                                                     projects__menu-tag--productions
-                                                    js--projects__menu-toggle">productions</span>
+                                                    js--projects__menu-toggle">
+
+                                            <i class="projects__menu-icon 
+                                                    projects__menu-icon__circle
+                                                    material-icons 
+                                                    material__icon--circle">fiber_manual_record</i>
+                                            productions
+                                        </span>
                                         <span class="projects__menu-tag 
                                                     projects__menu-tag--events
-                                                    js--projects__menu-toggle">events</span>
+                                                    js--projects__menu-toggle">
+                                                    
+                                            <i class="projects__menu-icon 
+                                                        projects__menu-icon__square
+                                                        material-icons 
+                                                        material__icon--square">stop</i>
+                                            events
+                                        </span>
                                         <span class="projects__menu-tag 
                                                     projects__menu-tag--all
                                                     active js--projects__menu-toggle">all</span>
