Updated to Node LTS. Init and destro glide on section switch. Updated Greensock to latest.

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
                                         <!-- <span class="projects__menu-label">View:</span>  -->
                                         <span class="projects__menu-tag 
                                                     projects__menu-tag--productions
-                                                    js--projects__menu-toggle">
+                                                    js--projects__menu-tag--productions">
 
                                             <i class="projects__menu-icon 
                                                     projects__menu-icon__circle
@@ -200,7 +200,7 @@
                                         </span>
                                         <span class="projects__menu-tag 
                                                     projects__menu-tag--events
-                                                    js--projects__menu-toggle">
+                                                    js--projects__menu-tag--events">
                                                     
                                             <i class="projects__menu-icon 
                                                         projects__menu-icon__square
@@ -210,7 +210,7 @@
                                         </span>
                                         <span class="projects__menu-tag 
                                                     projects__menu-tag--all
-                                                    active js--projects__menu-toggle">all</span>
+                                                    js--projects__menu-tag--all">all</span>
                                     </div>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                     </div>
                 </div>
 
-                <div class="js--glide 
+                <div class="js--glide  
                             glide
                             glide--art-projects">
                     <div class="glide__track 
