--- a/src/index.html
+++ b/src/index.html
@@ -120,9 +120,9 @@
                     </div>
                     <div class="bio__text">
                         <div class="bio__text--mask"></div>
-                        <p class="bio__paragraph--large">
+                      <!--   <p class="bio__paragraph--large">
                             The primary aim of my art-making is audience affect. I seek to create a visceral sensation of awe in my viewers. I also aspire to provide them an experience of deeply ‘getting it,’ but intellectual understanding is not required. The pursuit of such art has led me to primarily employ methods of visual theater. I am trained as both a physical actor and a puppeteer. I specialize in the dramaturgy of movement, whether it is through humans, puppets, or inanimate objects. 
-                        </p>
+                        </p> -->
                         <p  class="bio__paragraph">
                             Over the last few years my puppets have become a kind of performing scenery. Currently, I am exploring the total puppetization of a performance’s scenography. (My definition of scenography being: the visual mode and means, made up of inanimate objects, elements, and rules, which creates a holistic theatrical consciousness that changes over time.) The drama of this theater is abstracted to pattern, repetition, and met or unmet expectations. This makes my ‘stories’ akin to music. I use recurring themes, crescendos, staccato, and legato phrases. I am also highly influenced by techniques from comics and cinematography, specifically those that harness the power of an audience’s imagination.  
                         </p>
