hiding project filtering

--- a/src/index.html
+++ b/src/index.html
@@ -228,8 +228,8 @@
                             <div class="nav__item-label
                                         nav__item-label--this">
                                     <span>Art Projects</span>
-                                    <div class="projects__tag-types">
-                                        <!-- <span class="projects__menu-label">View:</span>  -->
+                            <!--         <div class="projects__tag-types">
+                                       <span class="projects__menu-label">View:</span>
                                         <span class="projects__menu-tag
                                                     projects__menu-tag--productions
                                                     js--projects__menu-tag--productions">
@@ -253,7 +253,7 @@
                                         <span class="projects__menu-tag
                                                     projects__menu-tag--all
                                                     js--projects__menu-tag--all">all</span>
-                                    </div>
+                                    </div> -->
                             </div>
                         </div>
 
