--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,26 @@
 	</head>
 
 	<body>
+
+<!--         <div class="glide">
+  <div class="glide__track" data-glide-el="track">
+    <ul class="glide__slides">
+      <li class="glide__slide" data-index="0"><span>0</span></li>
+      <li class="glide__slide" data-index="1"><span>1</span></li>
+      <li class="glide__slide" data-index="2"><span>2</span></li>
+      <li class="glide__slide" data-index="3"><span>3</span></li>
+      <li class="glide__slide" data-index="4"><span>4</span></li>
+      <li class="glide__slide" data-index="5"><span>5</span></li>
+    </ul>
+  </div>
+  <div class="glide__arrows" data-glide-el="controls">
+    <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+    <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+  </div>
+</div>
+
+ -->
+
         <div class="js--glide
                     glide
                     glide--art-projects">
@@ -14,6 +34,16 @@
                  data-glide-el="track">
             </div>
 
+<!--   <div class="glide__track" data-glide-el="track">
+    <ul class="glide__slides">
+      <li class="glide__slide" data-index="0"><span>0</span></li>
+      <li class="glide__slide" data-index="1"><span>1</span></li>
+      <li class="glide__slide" data-index="2"><span>2</span></li>
+      <li class="glide__slide" data-index="3"><span>3</span></li>
+      <li class="glide__slide" data-index="4"><span>4</span></li>
+      <li class="glide__slide" data-index="5"><span>5</span></li>
+    </ul>
+  </div> -->
             <div class="glide__arrows" data-glide-el="controls">
                 <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
                     <i class="material-icons ">arrow_backward</i>
