slider: added images back. uncommented modules. tweaked slider settings

--- a/src/index.html
+++ b/src/index.html
@@ -29,10 +29,10 @@
         <div class="js--glide
                     glide
                     glide--art-projects">
-        <!--     <div class="glide__track
+            <div class="glide__track
                         js--hbs-inject--art-projects__image-collection"
-                 data-glide-el="track"> -->
-
+                 data-glide-el="track">
+<!--
                <div class="glide__track" data-glide-el="track">
                    <ul class="glide__slides">
                      <li class="glide__slide" data-index="0">
@@ -59,7 +59,7 @@
                         <span>5</span>
                       </li>
                  </ul>
-                </div>
+                </div> -->
 
           <!--   <div class="glide__arrows" data-glide-el="controls">
                 <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
