--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,78 @@
 	<body>
         <div class="breakpoint"></div>
 
+        <!-- keep this here so on mobile it still takes up the full screen, if more than
+            the intro section shows -->
+        <div class="intro__image-wrapper
+                    js--hbs-inject--intro__hover-image-collection">
+        </div>
+
         <div id="fullpage" style="opacity: 0; visibility: hidden;">
+
+            <div class="section section--intro">
+                <div class="section--intro">
+
+                    <div class= "js--nav__section
+                                js--nav__section--intro
+                                nav__section
+                                nav__section--intro">
+                        <div class="nav__section-line-bg"></div>
+                        <div class="nav__section-line-active
+                                    js--nav__section-line-active--intro"></div>
+
+                        <div class="js--nav__item--next
+                                    nav__item
+                                    nav__item--next">
+                            <div class="nav__item-number">02</div>
+                            <div class="nav__item-label">Bio </div>
+                        </div>
+                    </div>
+
+                    <!-- <div class="js--hbs-inject--arrow"></div> -->
+
+                    <div class="intro__text-wrapper">
+                        <p class="intro__text
+                                  js--hbs-inject--intro__paragraph-fragments">
+                        </p>
+                    </div>
+                    <div class="bg__diags bg__diags--intro"></div>
+                </div>
+            </div>
+
             <div class="section section--art-projects">
+            <div class="js--nav__section
+                        js--nav__section--art-projects
+                        nav__section
+                        nav__section--art-projects">
+                    <div class="nav__section-line-bg"></div>
+                    <div class="nav__section-line-active"></div>
+
+                    <div class="js--nav__item--previous
+                                nav__item
+                                nav__item--previous
+                                ">
+                        <div class="nav__item-number ">02</div>
+                        <div class="nav__item-label">Bio</div>
+                    </div>
+
+                        <div class="js--nav__item--this
+                                    nav__item
+                                    nav__item--this">
+                            <!-- <div class="nav__item-number">01</div> -->
+                            <div class="nav__item-label
+                                        nav__item-label--this">
+                                    <span>Art Projects</span>
+                            </div>
+                        </div>
+
+                    <div class="js--nav__item--next
+                                nav__item
+                                nav__item--next">
+                        <div class="nav__item-number">04</div>
+                        <div class="nav__item-label">What Is?</div>
+                    </div>
+                </div>
+
                 <div class="js--glide
                             glide
                             glide--art-projects">
